@@ -5,7 +5,7 @@
 //   Jb Evain (jbevain@gmail.com)
 //
 // Generated by /CodeGen/cecil-gen.rb do not edit
-// Thu Sep 29 22:11:55 CEST 2005
+// Mon Feb 27 22:10:21 CET 2006
 //
 // (C) 2005 Jb Evain
 //
@@ -60,12 +60,8 @@ namespace Mono.Cecil.Cil {
 		event InstructionEventHandler OnInstructionAdded;
 		event InstructionEventHandler OnInstructionRemoved;
 
-		void Add (Instruction value);
 		void Clear ();
 		bool Contains (Instruction value);
 		int IndexOf (Instruction value);
-		void Insert (int index, Instruction value);
-		void Remove (Instruction value);
-		void RemoveAt (int index);
 	}
 }
