@@ -5,7 +5,7 @@
 //   Jb Evain (jbevain@gmail.com)
 //
 // Generated by /CodeGen/cecil-gen.rb do not edit
-// Thu Sep 29 22:11:55 CEST 2005
+// Mon Feb 27 22:10:21 CET 2006
 //
 // (C) 2005 Jb Evain
 //
@@ -71,7 +71,7 @@ namespace Mono.Cecil.Cil {
 			m_items = new ArrayList ();
 		}
 
-		public void Add (Instruction value)
+		internal void Add (Instruction value)
 		{
 			if (OnInstructionAdded != null && !this.Contains (value))
 				OnInstructionAdded (this, new InstructionEventArgs (value));
@@ -96,21 +96,21 @@ namespace Mono.Cecil.Cil {
 			return m_items.IndexOf (value);
 		}
 
-		public void Insert (int index, Instruction value)
+		internal void Insert (int index, Instruction value)
 		{
 			if (OnInstructionAdded != null && !this.Contains (value))
 				OnInstructionAdded (this, new InstructionEventArgs (value));
 			m_items.Insert (index, value);
 		}
 
-		public void Remove (Instruction value)
+		internal void Remove (Instruction value)
 		{
 			if (OnInstructionRemoved != null && this.Contains (value))
 				OnInstructionRemoved (this, new InstructionEventArgs (value));
 			m_items.Remove (value);
 		}
 
-		public void RemoveAt (int index)
+		internal void RemoveAt (int index)
 		{
 			if (OnInstructionRemoved != null)
 				OnInstructionRemoved (this, new InstructionEventArgs (this [index]));
